# sunken-treasure-chest

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
annexes/: DEMONSTRATION.md  IA_USAGE.md  ROADMAP.md
annexes/diagrammes/: diagramme_de_classes.uml  diagramme_de_séquence_1.uml  diagramme_de_séquence_2.uml
annexes/sprints/day_1/: SPRINT_PLANNING_DAY_1.md  SPRINT_RETROSPECTIVE_DAY_1.md
annexes/sprints/day_2/: SPRINT_PLANNING_DAY_2.md  SPRINT_RETROSPECTIVE_DAY_2.md
annexes/sprints/day_3/: SPRINT_PLANNING_DAY_3.md  SPRINT_RETROSPECTIVE_DAY_3.md
annexes/sprints/day_4/: SPRINT_PLANNING_DAY_4.md  SPRINT_RETROSPECTIVE_DAY_4.md
annexes/sprints/day_5/: SPRINT_PLANNING_DAY_5.md  SPRINT_RETROSPECTIVE_DAY_5.md
data/: splash_text.txt
data/maps/: SEALS.map  another_way.map  arena.map  classic.map  corridors.map  maze.map  nethack.map
env/: pyvenv.cfg
src/: main_cli.py  main_web.py
src/cli/: cli_colors.py  cli_display.py  cli_logging.py  level_editor.py  main.py
src/core/: all_entities.py  consts.py  entity.py  game_instance.py  level.py  pathfinding.py  splash_text.py  tiles.py  treasure.py  utils_types.py
src/core/buildings/: all_buildings.py  all_towers.py  all_traps.py  building.py  building_descriptions.py  tower.py  trap.py
src/web/: grid _recreator.py  recreator.py  to_dict.py
src/web/static/: index.html  style.css
src/web/static/assets/: back.aseprite  credits.aseprite  title.aseprite
src/web/static/js/: config.js  input.js  main.js  network.js  render.js  save.js  sound.js  (+2 more)
tests/: general_test.py  map_test.py  splash_test.py
(+8 files in other folders)
